# machines-archived

./: 2x_prototype_issues.md  CMakeLists.txt  README.md
.github/workflows/: build-conan.yaml
cmake/: CompilerSettings.cmake
include/libdev/base/private/: persist.hpp
src/: CMakeLists.txt
src/libdev/ani/: AniSmackerRegular.cpp
src/libdev/base/: appbuff.cpp  diag.hpp  istr.cpp  prepost.hpp
src/libdev/base/internal/: appbuff.hpp
src/libdev/ftl/: serialid.hpp  seriamap.hpp
src/libdev/gui/: button.cpp  button.hpp  displaya.cpp  displaya.hpp  editbox.hpp  event.hpp  font.cpp  font.hpp  gui.hpp  manager.cpp  painter.cpp
src/libdev/machgui/: actbmpnm.cpp  bildmenu.cpp  bmutext.cpp  bufscbut.cpp  bufscbut.hpp  buildbar.cpp  buildbar.hpp  buildmci.cpp  chatmsgd.cpp  cmddestr.cpp  commbank.cpp  conselic.cpp  consmenu.cpp  controlp.cpp  corral.cpp  ctrladon.cpp  ctxoptns.cpp  ctxoptns.hpp  ctxskirm.cpp  ctxskirm.hpp  database.cpp  dbscenar.cpp  dbscenar.hpp  dropdwnc.cpp  dropdwnc.hpp  factbuff.cpp  gui.cpp  gui.hpp  guictrl.cpp  guictrl.hpp  health.cpp  health.hpp  hwrbicns.cpp  hwrbicon.cpp  hwrebank.cpp  hwreicon.cpp  hwremenu.cpp  igcurs2d.cpp  ingame.cpp  machnav.cpp  (+14 more)
src/libdev/machgui/internal/: igameimp.hpp  strings.hpp
src/libdev/machlog/: administ.cpp  canattac.cpp  canattac.hpp  persist.cpp  races.cpp
src/libdev/mathex/: abox2d.cpp  abox2d.hpp  size2d.cpp  size2d.hpp
src/libdev/render/: cursor2d.cpp  cursor2d.hpp  device.cpp  surface.cpp  surface.hpp  surfbody.cpp  trigroup.cpp
src/libdev/stdlib/: CMakeLists.txt
src/libdev/system/: pathname.cpp  pathname.hpp  registry.cpp  registry.hpp
src/libdev/world4d/: entity.cpp
src/projects/machines/: sdlapp.cpp
test/: CMakeLists.txt
test/gui/: GuiRootSharedBitmapsTests.cpp
